change: rename download-monster-data to prepare-cache, save monster list

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format:check": "prettier -c .",
     "lint": "eslint .",
     "lint:strict": "eslint --max-warnings 0 .",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "prepare-cache": "tsx src/prepare-cache.ts"
   },
   "nano-staged": {
     "**/*.{js,cjs,mjs,ts,mts,cts,json,md,yaml}": [
